<?xml version="1.0" encoding="utf-8"?>
<com.android.systemui.statusbar.phone.ExpandedShortCutView android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="110.0px"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <HorizontalScrollView android:id="@id/buttonlist" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <Button android:textSize="12.0dip" android:id="@id/wifi" android:background="@drawable/btn_shortcut_default" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/wifi_action" android:drawableTop="@drawable/ic_wifi_off" />
            <Button android:textSize="12.0dip" android:id="@id/bluetooth" android:background="@drawable/btn_shortcut_default" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="2.0dip" android:text="@string/bluetooth_action" android:drawableTop="@drawable/ic_bluetooth_off" />
            <Button android:textSize="12.0dip" android:id="@id/gps" android:background="@drawable/btn_shortcut_default" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="2.0dip" android:text="@string/gps_action" android:drawableTop="@drawable/ic_gps_off" />
            <Button android:textSize="12.0dip" android:id="@id/brightness" android:background="@drawable/btn_shortcut_default" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="2.0dip" android:text="@string/brightness_select_action" android:drawableTop="@drawable/ic_brightness_default" />
            <Button android:textSize="12.0dip" android:id="@id/silent" android:background="@drawable/btn_shortcut_default" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="2.0dip" android:text="@string/slient_select_action" android:drawableTop="@drawable/ic_silent_off" />
            <Button android:textSize="12.0dip" android:id="@id/dolby" android:background="@drawable/btn_shortcut_default" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="2.0dip" android:text="@string/dolby_action" android:drawableTop="@drawable/ic_dolby_off" />
            <Button android:textSize="12.0dip" android:id="@id/screenlock" android:background="@drawable/btn_shortcut_default" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="2.0dip" android:text="@string/screenlock_action" android:drawableTop="@drawable/ic_screenlock" />
            <Button android:textSize="12.0dip" android:id="@id/ppp1" android:background="@drawable/btn_shortcut_default" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="2.0dip" android:text="@string/ppp_action" android:drawableTop="@drawable/ic_connect_off1" />
            <Button android:textSize="12.0dip" android:id="@id/ppp" android:background="@drawable/btn_shortcut_default" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="2.0dip" android:text="@string/ppp_action" android:drawableTop="@drawable/ic_connect_off" />
            <Button android:textSize="12.0dip" android:id="@id/hotspot" android:background="@drawable/btn_shortcut_default" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="2.0dip" android:text="@string/hotspot_select_action" android:drawableTop="@drawable/ic_hotspot_on" />
            <Button android:textSize="12.0dip" android:id="@id/rotate" android:background="@drawable/btn_shortcut_default" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="2.0dip" android:text="@string/rotate_select_action" android:drawableTop="@drawable/ic_rotate_on" />
            <Button android:textSize="12.0dip" android:id="@id/profile" android:background="@drawable/btn_shortcut_default" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="2.0dip" android:text="@string/profile_action" android:drawableTop="@drawable/ic_profile_on" />
            <Button android:textSize="10.0dip" android:id="@id/sync" android:background="@drawable/btn_shortcut_default" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="2.0dip" android:text="@string/sync_action" android:drawableTop="@drawable/ic_sync_on" />
            <Button android:textSize="12.0dip" android:id="@id/airplanemode" android:background="@drawable/btn_shortcut_default" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="2.0dip" android:text="@string/airplanemode_action" android:drawableTop="@drawable/ic_airplanemode_off" />
            <Button android:textSize="12.0dip" android:id="@id/roaming" android:background="@drawable/btn_shortcut_default" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="2.0dip" android:text="@string/roaming_action" android:drawableTop="@drawable/ic_roaming_on" />
            <Button android:textSize="12.0dip" android:id="@id/ppp2" android:background="@drawable/btn_shortcut_default" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="2.0dip" android:text="@string/ppp_action" android:drawableTop="@drawable/ic_connect_off2" />
            <Button android:textSize="12.0dip" android:id="@id/apn" android:background="@drawable/btn_shortcut_default" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="2.0dip" android:text="@string/apn_select_action" android:drawableTop="@drawable/ic_apn_on" />
        </LinearLayout>
    </HorizontalScrollView>
</com.android.systemui.statusbar.phone.ExpandedShortCutView>