<?xml version="1.0" encoding="utf-8"?>
<com.android.systemui.statusbar.phone.ExpandedShortCutView android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="105.0px">
        <Button android:textSize="12.0dip" android:id="@id/wifi" android:background="@drawable/btn_shortcut_default" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/wifi_action" android:drawableTop="@drawable/ic_wifi_off" android:layout_weight="1.0" />
        <Button android:textSize="12.0dip" android:id="@id/bluetooth" android:background="@drawable/btn_shortcut_default" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="2.0dip" android:text="@string/bluetooth_action" android:drawableTop="@drawable/ic_bluetooth_off" android:layout_weight="1.0" />
        <Button android:textSize="12.0dip" android:id="@id/gps" android:background="@drawable/btn_shortcut_default" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="2.0dip" android:text="@string/gps_action" android:drawableTop="@drawable/ic_gps_off" android:layout_weight="1.0" />
        <Button android:textSize="12.0dip" android:id="@id/brightness" android:background="@drawable/btn_shortcut_default" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="2.0dip" android:text="@string/brightness_select_action" android:drawableTop="@drawable/ic_brightness_default" android:layout_weight="1.0" />
        <Button android:textSize="12.0dip" android:id="@id/silent" android:background="@drawable/btn_shortcut_default" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="2.0dip" android:text="@string/slient_select_action" android:drawableTop="@drawable/ic_silent_off" android:layout_weight="1.0" />
        <Button android:textSize="12.0dip" android:id="@id/dolby" android:background="@drawable/btn_shortcut_default" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="2.0dip" android:text="@string/dolby_action" android:drawableTop="@drawable/ic_dolby_off" android:layout_weight="1.0" />
        <Button android:textSize="12.0dip" android:id="@id/screenlock" android:background="@drawable/btn_shortcut_default" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="2.0dip" android:text="@string/screenlock_action" android:drawableTop="@drawable/ic_screenlock" android:layout_weight="1.0" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="105.0px">
        <Button android:textSize="12.0dip" android:id="@id/ppp1" android:background="@drawable/btn_shortcut_default" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="2.0dip" android:layout_marginBottom="2.0dip" android:text="@string/ppp_action" android:drawableTop="@drawable/ic_connect_off1" android:layout_weight="1.0" />
        <Button android:textSize="12.0dip" android:id="@id/ppp" android:background="@drawable/btn_shortcut_default" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="2.0dip" android:layout_marginBottom="2.0dip" android:text="@string/ppp_action" android:drawableTop="@drawable/ic_connect_off" android:layout_weight="1.0" />
        <Button android:textSize="12.0dip" android:id="@id/hotspot" android:background="@drawable/btn_shortcut_default" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="2.0dip" android:layout_marginTop="2.0dip" android:layout_marginBottom="2.0dip" android:text="@string/hotspot_select_action" android:drawableTop="@drawable/ic_hotspot_on" android:layout_weight="1.0" />
        <Button android:textSize="12.0dip" android:id="@id/rotate" android:background="@drawable/btn_shortcut_default" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="2.0dip" android:layout_marginTop="2.0dip" android:layout_marginBottom="2.0dip" android:text="@string/rotate_select_action" android:drawableTop="@drawable/ic_rotate_on" android:layout_weight="1.0" />
        <Button android:textSize="12.0dip" android:id="@id/profile" android:background="@drawable/btn_shortcut_default" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="2.0dip" android:layout_marginTop="2.0dip" android:layout_marginBottom="2.0dip" android:text="@string/profile_action" android:drawableTop="@drawable/ic_profile_on" android:layout_weight="1.0" />
        <Button android:textSize="10.0dip" android:id="@id/sync" android:background="@drawable/btn_shortcut_default" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="2.0dip" android:layout_marginTop="2.0dip" android:layout_marginBottom="2.0dip" android:text="@string/sync_action" android:drawableTop="@drawable/ic_sync_on" android:layout_weight="1.0" />
        <Button android:textSize="12.0dip" android:id="@id/roaming" android:background="@drawable/btn_shortcut_default" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="2.0dip" android:layout_marginTop="2.0dip" android:layout_marginBottom="2.0dip" android:text="@string/roaming_action" android:drawableTop="@drawable/ic_roaming_on" android:layout_weight="1.0" />
        <Button android:textSize="12.0dip" android:id="@id/airplanemode" android:background="@drawable/btn_shortcut_default" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="2.0dip" android:layout_marginTop="2.0dip" android:layout_marginBottom="2.0dip" android:text="@string/airplanemode_action" android:drawableTop="@drawable/ic_airplanemode_off" android:layout_weight="1.0" />
        <Button android:textSize="12.0dip" android:id="@id/ppp2" android:background="@drawable/btn_shortcut_default" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:layout_marginTop="2.0dip" android:layout_marginBottom="2.0dip" android:text="@string/ppp_action" android:drawableTop="@drawable/ic_connect_off2" android:layout_weight="1.0" />
        <Button android:textSize="12.0dip" android:id="@id/apn" android:background="@drawable/btn_shortcut_default" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:layout_marginTop="2.0dip" android:layout_marginBottom="2.0dip" android:text="@string/apn_select_action" android:drawableTop="@drawable/ic_apn_on" android:layout_weight="1.0" />
    </LinearLayout>
</com.android.systemui.statusbar.phone.ExpandedShortCutView>