<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@id/NotificationTitle" android:background="@drawable/statusbar_background" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:systemui="http://schemas.android.com/apk/res/com.android.systemui">
    <TextView android:textAppearance="@*android:style/TextAppearance.Medium" android:textColor="#ffffffff" android:gravity="center_vertical" android:id="@id/notification_all_title" android:paddingLeft="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/statusbar_expanded_notification_title" android:maxLines="1" android:layout_weight="1.0" />
    <Button android:textAppearance="?android:textAppearanceSmall" android:id="@id/clear_all_button" android:background="@drawable/btn_tasklist_killall" android:paddingLeft="8.0dip" android:paddingRight="8.0dip" android:layout_width="wrap_content" android:layout_height="30.0dip" android:text="@string/status_bar_clear_all_button" android:contentDescription="@string/accessibility_clear_all" />
</LinearLayout>